<resources>
    <string name="app_name">MoCloud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="director">Director</string>
    <string name="released">Released</string>
    <string name="run_time">Runtime</string>
    <string name="language">Language</string>
    <string name="movie_title">Title</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="comments">Comments</string>
    <string name="crew">Crew</string>
    <string name="spoiler_alert">Spoiler</string>
    <string name="action_type_switch">Switch to TV</string>
    <string name="click_to_login">Click to login</string>
    <string name="birth_place">Birthplace</string>
    <string name="staff_birthday">Birthday</string>
    <string name="staff_deathday">Deathday</string>
    <string name="staff_website">Homepage</string>
    <string name="staff_biography">Biography:</string>
    <string name="as_actor">As actor</string>
    <string name="write_external_permission" >We will request write external permission in the following dialog to cache movie poster and actor image,this will greatly improve data load speed.\n\nYou can also modify this in settings.\n\nshall we go?
    </string>
    <string name="comment_tip">Please write in English.</string>
    <string name="comment_tip1">1.at least five words.\n2.write in English.</string>
    <string name="reply_success">Reply success.</string>
    <string name="comment_success">Comment success.</string>
    <string name="no_data">No data.</string>
    <string name="comments_sort_by_newest">Sort by newest</string>
    <string name="comments_sort_by_oldest">Sort by oldest</string>
    <string name="comments_sort_by_likes">Sort by likes</string>
    <string name="comments_sort_by_replies">Sort by replies</string>
    <string name="review_tip">Review</string>
    <string name="not_login">Please login first.</string>
    <string name="under_construction">This is under construction.</string>
    <string name="staff_role">Role</string>
    <string name="sync_state">Syncing data…</string>
    <string name="certification">Certification</string>
    <string name="genres">Genres</string>
    <string name="logging_in">Logging in…</string>
    <string name="tagline">Tagline</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="already_get_all_data">Already get all data.</string>
    <string name="empty_data">No data.</string>
    <string name="no_more_comments">There is no more comments,add one?</string>
    <string name="trailer">Trailer</string>
    <string name="spoiler">Spoiler</string>
    <string name="recommendation_recommendation_title">Recommendations</string>
    <string name="feature_lists">Feature lists</string>
    <string name="loaded_failed">Loaded failed,click to refresh.</string>
    <string name="loading_failed">Loading failed,try it later.</string>
    <string name="see_more">More…</string>
    <string name="navigation_title_movie">Movie</string>
    <string name="navigation_title_tv">TV</string>
    <string name="navigation_title_user">User</string>

    <string-array name="tab_names">
        <item>Trending</item>
        <!--<item>Popular</item>-->
        <!--<item>Played</item>-->
        <!--<item>Watched</item>-->
        <!--<item>Collected</item>-->
        <item>Anticipated</item>
        <item>Box Office</item>
    </string-array>

    <string-array name="tab_movie_names">
        <item>Trending</item>
        <item>Anticipated</item>
        <item>Box Office</item>
    </string-array>

    <!--<string-array name="tab_names">-->
        <!--<item>Popular</item>-->
        <!--<item>Now playing</item>-->
        <!--<item>Top rated</item>-->
        <!--<item>Upcoming</item>-->
        <!--<item>Trending</item>-->
    <!--</string-array>-->

    <string-array name="staff_tab_names">
        <item>Biography</item>
        <item>Movie</item>
        <!--<item>BaseShow</item>-->
    </string-array>
    <string-array name="tab_tv_names" >
        <item>Trending</item>
        <item>Anticipated</item>
    </string-array>
</resources>
