<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/card_style"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="1dp">

        <com.floatingmuseum.mocloud.widgets.RatioImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            app:image_ratio="1.42"
            tools:src="@drawable/default_movie_poster" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/detail_title"
                android:text="@string/movie_title" />

            <TextView
                android:id="@+id/tv_movie_title"
                style="@style/detail_content"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="2"
                tools:text="TRON: Legacy" />

            <TextView
                style="@style/detail_title"
                android:text="@string/released" />

            <TextView
                android:id="@+id/tv_released"
                style="@style/detail_content"
                tools:text="December 10, 2010" />


            <TextView
                style="@style/detail_title"
                android:text="@string/run_time" />

            <TextView
                android:id="@+id/tv_runtime"
                style="@style/detail_content"
                tools:text="125 mins" />


            <TextView
                style="@style/detail_title"
                android:text="@string/language" />

            <TextView
                android:id="@+id/tv_language"
                style="@style/detail_content"
                tools:text="English" />

            <TextView
                style="@style/detail_title"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/tv_rating"
                style="@style/detail_content"
                tools:text="6.5" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
